Add Update Contact Email page
This commit adds the Update Contact Email page and updates all headers

--- a/Pma.html
+++ b/Pma.html
@@ -395,7 +395,7 @@
                               Language</a>
                         </li>
                         <li>
-                           <a id="lnkUserPrefUpdateContactInfo" href="#" data-toggle="modal" data-target="#demo">Update
+                           <a id="lnkUserPrefUpdateContactInfo" href="changeemail.html">Update
                               Contact Email </a>
                         </li>
                         <li>
