--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                               <a id="lnkUserPrefChangeLang" href="#" data-toggle="modal" data-target="#demo">Change Language</a>
                            </li>
                            <li>
-                              <a id="lnkUserPrefUpdateContactInfo" href="#" data-toggle="modal" data-target="#demo">Update Contact Email                                    </a>
+                              <a id="lnkUserPrefUpdateContactInfo" href="changeemail.html">Update Contact Email</a>
                            </li>
                            <li>
                               <a id="lnkUserPrefResetInterface" href="#" data-toggle="modal" data-target="#demo" onclick="reset_all_interface_settings()">
@@ -172,7 +172,7 @@
                               <div class="item" role="page">
                                  <a id="icon-contact_information" class="itemImageWrapper integrations_icon spriteicon_img icon-contact_information" href="#" data-toggle="modal" data-target="#demo" target="">
                                  </a>
-                                 <a id="item_contact_information" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Update Contact Email</a>
+                                 <a id="item_contact_information" class="itemTextWrapper link"  href="changeemail.html">Update Contact Email</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
