--- a/Diskspace.html
+++ b/Diskspace.html
@@ -391,7 +391,7 @@
                                     <a id="lnkUserPrefChangeLang" href="#" data-toggle="modal" data-target="#demo">Change Language</a>
                                 </li>
                                 <li>
-                                    <a id="lnkUserPrefUpdateContactInfo" href="#" data-toggle="modal" data-target="#demo">Update Contact Email                                    </a>
+                                    <a id="lnkUserPrefUpdateContactInfo" href="changeemail.html">Update Contact Email</a>
                                 </li>
                                 <li>
                                     <a id="lnkUserPrefResetInterface" href="#" data-toggle="modal" data-target="#demo">
