Change FTP Accounts page
Updates the FTP Username to YOURPREFIX_DEMO

--- a/ftpaccounts.html
+++ b/ftpaccounts.html
@@ -456,7 +456,7 @@ Use your FTP client to upload and download data to your hosting.  Your websites 
     </thead>
     <tbody>
                           
-   <tr><td>demo_</td><td><i>(Your vPanel Password)</i></td><td>ftpupload.net</td><td>21</td><td> <a href="ftpsoftware.html">Recommended Clients</a> </td></tr> 
+   <tr><td>YOURPREFIX_DEMO</td><td><i>(Your vPanel Password)</i></td><td>ftpupload.net</td><td>21</td><td> <a href="ftpsoftware.html">Recommended Clients</a> </td></tr> 
       </tbody></table>
 <br><br>
 Premium hosting allow you to create multiple FTP accounts with the ability to select an individual document root
