--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-contact_information" class="itemImageWrapper integrations_icon spriteicon_img icon-contact_information" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-contact_information" class="itemImageWrapper integrations_icon spriteicon_img icon-contact_information" href="changeemail.html">
                                  </a>
                                  <a id="item_contact_information" class="itemTextWrapper link"  href="changeemail.html">Update Contact Email</a>
                               </div>
