--- a/index.html
+++ b/index.html
@@ -385,9 +385,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-errors" class="itemImageWrapper integrations_icon spriteicon_img icon-errors" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-errors" class="itemImageWrapper integrations_icon spriteicon_img icon-errors" href="errorlog.html">
                                  </a>
-                                 <a id="item_errors" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Error Logs</a>
+                                 <a id="item_errors" class="itemTextWrapper link"  href="errorlog.html">Error Logs</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
