--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
                                  -->
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-mx_entry" class="itemImageWrapper integrations_icon spriteicon_img icon-mx_entry" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-mx_entry" class="itemImageWrapper integrations_icon spriteicon_img icon-mx_entry" href="mxrecords.html">
                                  </a>
-                                 <a id="item_mx_entry" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">MX Entry</a>
+                                 <a id="item_mx_entry" class="itemTextWrapper link"  href="mxrecords.html">MX Entry</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
