--- a/changelanguage.html
+++ b/changelanguage.html
@@ -431,23 +431,18 @@
          <div style="position: float;left:100px; vertical-align:middle;"></div>
       </aside>
 <!-- Content -->
-<div id="content">
+ <div id="content" class="container-fluid">
+            <h1 class="page-header">
+            <span id="icon-change_language" class="page-icon icon-change_language"></span>
+            <span id="pageHeading">Change Language</span>
+            
+        </h1>
 <div class="body-content">
-<h1 class="page-header">
-            <span id="icon-remote_mysql" class="page-icon icon-remote_mysql"></span>
-            <span id="pageHeading">Remote MySQL®</span>
-</h1></div>
-
-Remote MySQL allows you to connect to the MySQL databases on your hosting server here from another server or computer.<br><br>
-Free hosting plans do not support remote MySQL connections, to get this extra functionality please order a premium hosting plan:<br>
-<a href="https://ifastnet.com/portal/sharedhosting.php">Order new premium account</a><br>
-<br>
-Or you can upgrade your entire free hosting account to premium using our upgrade process here:<br>
-<a href="upgrade.html">Upgrade existing account</a><br>
+The language selecton is chosen at the control panel login box.<br><br>Simply click <a class="btn btn-warning" href="#" data-toggle="modal" data-target="#demo">Log Out</a> then choose your language in the drop down box and login again.
+<br><br>
 </div>
 </div>
-
-
+</div>
 <footer>
     <!-- UI INCLUDES GLOBAL FOOTER -->
     <!-- UI INCLUDES GLOBAL FOOTER END -->
@@ -488,5 +483,7 @@ Or you can upgrade your entire free hosting account to premium using our upgrade
        </div>
     </div>
  </footer>
+
 </body>
+
 </html>
