--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                               <a id="lnkUserPrefChangePwd" href="#" data-toggle="modal" data-target="#demo">Change Password</a>
                            </li>
                            <li>
-                              <a id="lnkUserPrefChangeLang" href="#" data-toggle="modal" data-target="#demo">Change Language</a>
+                              <a id="lnkUserPrefChangeLang" href="changelanguage.html">Change Language</a>
                            </li>
                            <li>
                               <a id="lnkUserPrefUpdateContactInfo" href="changeemail.html">Update Contact Email</a>
@@ -164,9 +164,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-change_language" class="itemImageWrapper integrations_icon spriteicon_img icon-change_language" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-change_language" class="itemImageWrapper integrations_icon spriteicon_img icon-change_language" href="changelanguage.html">
                                  </a>
-                                 <a id="item_change_language" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Change Language</a>
+                                 <a id="item_change_language" class="itemTextWrapper link"  href="changelanguage.html">Change Language</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
