--- a/Tutorialdomain.html
+++ b/Tutorialdomain.html
@@ -388,7 +388,7 @@
                                     <a id="lnkUserPrefChangePwd" href="#" data-toggle="modal" data-target="#demo">Change Password</a>
                                 </li>
                                 <li>
-                                    <a id="lnkUserPrefChangeLang" href="#" data-toggle="modal" data-target="#demo">Change Language</a>
+                                    <a id="lnkUserPrefChangeLang" href="changelanguage.html">Change Language</a>
                                 </li>
                                 <li>
                                     <a id="lnkUserPrefUpdateContactInfo" href="changeemail.html">Update Contact Email</a>
