--- a/hosting-plan-table.html
+++ b/hosting-plan-table.html
@@ -391,7 +391,7 @@
                               Password</a>
                         </li>
                         <li>
-                           <a id="lnkUserPrefChangeLang" href="#" data-toggle="modal" data-target="#demo">Change
+                           <a id="lnkUserPrefChangeLang" href="changelanguage.html">Change
                               Language</a>
                         </li>
                         <li>
