--- a/mysql.html
+++ b/mysql.html
@@ -390,7 +390,7 @@
                               Password</a>
                         </li>
                         <li>
-                           <a id="lnkUserPrefChangeLang" href="#" data-toggle="modal" data-target="#demo">Change
+                           <a id="lnkUserPrefChangeLang" href="changelanguage.html">Change
                               Language</a>
                         </li>
                         <li>
