--- a/phpinfo.html
+++ b/phpinfo.html
@@ -392,7 +392,7 @@
                               Password</a>
                         </li>
                         <li>
-                           <a id="lnkUserPrefChangeLang" href="#" data-toggle="modal" data-target="#demo">Change
+                           <a id="lnkUserPrefChangeLang" href="changelanguage.html">Change
                               Language</a>
                         </li>
                         <li>
