--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-advanced_zone_editor" class="itemImageWrapper integrations_icon spriteicon_img icon-advanced_zone_editor" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-advanced_zone_editor" class="itemImageWrapper integrations_icon spriteicon_img icon-advanced_zone_editor" href="spfrecords.html">
                                  </a>
-                                 <a id="item_advanced_zone_editor" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">SPF Records</a>
+                                 <a id="item_advanced_zone_editor" class="itemTextWrapper link"  href="spfrecords.html">SPF Records</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <!-- DISABLED
@@ -464,7 +464,7 @@
                                  <a id="item_multiphp_configuration" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Alter PHP Config</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
-                              <!-- Disabled.
+                              <!-- DISABLED
                               <div class="item" role="page">
                                  <a id="icon-lvephpsel" class="itemImageWrapper integrations_icon spriteicon_img icon-lvephpsel" href="phpselectversion.html" >
                                  </a>
