Add Error Pages

--- a/index.html
+++ b/index.html
@@ -498,9 +498,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-error_pages" class="itemImageWrapper integrations_icon spriteicon_img icon-error_pages" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-error_pages" class="itemImageWrapper integrations_icon spriteicon_img icon-error_pages" href="errorpages.html">
                                  </a>
-                                 <a id="item_error_pages" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Error Pages</a>
+                                 <a id="item_error_pages" class="itemTextWrapper link"  href="errorpages.html">Error Pages</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                            </div>
