Add Parked Domains page

--- a/accountsettings.html
+++ b/accountsettings.html
@@ -560,7 +560,7 @@
             </tr>
             <tr>
             <td>Parked domains on account</td>
-            <td><a class="btn btn-primary" href="#" data-toggle="modal" data-target="#demo">View / Add Parked Domains</a><br>
+            <td><a class="btn btn-primary" href="parked.html">View / Add Parked Domains</a><br>
             </td>
             </tr>
             <tr>
