--- a/cname.html
+++ b/cname.html
@@ -463,6 +463,7 @@
                         <td style="width: 204px;"><select name="d_name">
                               <option>wonderfulblog.com</option>
                               <option>site.wonderfulblog.com</option>
+                              <option>parkedblog.com</option>
                            </select>
                            <br>
 
