--- a/errorlog.html
+++ b/errorlog.html
@@ -450,7 +450,10 @@ If you are still seeing php errors, and nothing is shown in these logs please en
 <select name="day"><option value="11-17-22">11-17-2022</option></select>
 </td><td><input type="hidden" name="domain_name" value="wonderfulblog.com"> <input class="btn btn-success" type="button" value="Download" href="#" data-toggle="modal" data-target="#demo"></td></tr><form></form><tr><td style="width: 154px;" class="rightcolumn"> site.wonderfulblog.com </td> <td>  
 <select name="day"><option value="11-17-22">11-17-2022</option></select>
-</td><td><input type="hidden" name="domain_name" value="site.wonderfulblog.com"> <input class="btn btn-success" type="button" value="Download" href="#" data-toggle="modal" data-target="#demo"></td></tr>                                                      
+</td><td><input type="hidden" name="domain_name" value="site.wonderfulblog.com"> <input class="btn btn-success" type="button" value="Download" href="#" data-toggle="modal" data-target="#demo"></td></tr>
+<td style="width: 154px;" class="rightcolumn"> parkedblog.com </td> <td>
+   <select name="day"><option value="11-17-22">11-17-2022</option></select>
+   </td><td><input type="hidden" name="domain_name" value="parkedblog.com"> <input class="btn btn-success" type="button" value="Download" href="#" data-toggle="modal" data-target="#demo"></td></tr>                                            
 </tbody>
 </table>
 <br><br>
