--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-aliases" class="itemImageWrapper integrations_icon spriteicon_img icon-aliases" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-aliases" class="itemImageWrapper integrations_icon spriteicon_img icon-aliases" href="parked.html">
                                  </a>
-                                 <a id="item_aliases" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Aliases (Parked Domains)</a>
+                                 <a id="item_aliases" class="itemTextWrapper link"  href="parked.html">Aliases (Parked Domains)</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
@@ -616,7 +616,7 @@
                         <tr class="row-odd">
                            <td class="stats_left">Parked Domains:</td>
                            <td class="stats_right">
-                              0 / Unlimited
+                              1 / Unlimited
                               <div class="stats_progress_bar">
                                  <div class="cpanel_widget_progress_bar_percent" style="display:none">0</div>
                               </div>
