--- a/upgrade.html
+++ b/upgrade.html
@@ -517,6 +517,7 @@ upgrade all your domains and sub domains to our enhanced Premium Hosting
 
 • <b>wonderfulblog.com</b><br>
 • <b>site.wonderfulblog.com</b><br>
+• <b>parkedblog.com</b><br>
 </div></div> 
  
  
