--- a/accountsettings.html
+++ b/accountsettings.html
@@ -603,7 +603,7 @@
             <tr>
             <td>PHP version<br>
             </td>
-            <td>7.0&nbsp; <a class="btn btn-primary" href="#" data-toggle="modal" data-target="#demo">Choose older PHP versions here</a><br>
+            <td>7.0&nbsp; <a class="btn btn-primary" href="phpselectversion.html">Choose older PHP versions here</a><br>
             </td>
             </tr>
             <tr>
