--- a/index.html
+++ b/index.html
@@ -441,9 +441,9 @@
                            <div id="software-body" class="panel-body icon-container-body">
                               <!-- ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-sitereptile" class="itemImageWrapper integrations_icon spriteicon_img icon-sitereptile" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-sitereptile" class="itemImageWrapper integrations_icon spriteicon_img icon-sitereptile" href="sitebuilder.html">
                                  </a>
-                                 <a id="item_sitereptile" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">SiteBuilder</a>
+                                 <a id="item_sitereptile" class="itemTextWrapper link" href="sitebuilder.html">SiteBuilder</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
