--- a/index.html
+++ b/index.html
@@ -422,9 +422,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-ssl_tls" class="itemImageWrapper integrations_icon spriteicon_img icon-ssl_tls" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-ssl_tls" class="itemImageWrapper integrations_icon spriteicon_img icon-ssl_tls" href="sslcert.html">
                                  </a>
-                                 <a id="item_ssl_tls" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">SSL/TLS</a>
+                                 <a id="item_ssl_tls" class="itemTextWrapper link"  href="sslcert.html">SSL/TLS</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                            </div>
