Add SiteBuilder links on Addon Domains and Subdomains

--- a/addondomains.html
+++ b/addondomains.html
@@ -477,7 +477,7 @@ File Manager, Website Builder or Script Installer
 
         <tr><td style="text-align: left; ">wonderfulblog.com</td><td style="text-align: left; "><small>/home/DEMO/YOURDOMAIN/YOURPREFIX/wonderfulblog.com</small></td><td style="text-align: left;">
                  <input type="button" class="btn btn-danger" href="#" data-toggle="modal" data-target="#demo" title="" style="width: 8em" value="Delete">
-<input class="btn btn-primary" type="button" href="#" data-toggle="modal" data-target="#demo" title="" style="width: 8em" value="Site Builder"> </td>
+                 <a class="btn btn-primary" href="sitebuilder.html" style="width: 8em">Site Builder</a> </td>
                 </tr>      
     </tbody>
   </table>
