--- a/subdomains.html
+++ b/subdomains.html
@@ -521,7 +521,7 @@ your websites files into.  Each sub domain is a new unique website.
 		  window.location = "/panel/indexpl.php?option=subdomains_rem&site=vpdemo.22web.org"
 		  }
 		</script>
-	   <input type="button" style="width: 7em" class="btn btn-danger" href="#" data-toggle="modal" data-target="#demo" value="Delete"> <br><input type="button" style="width: 7em" class="btn btn-primary" href="#" data-toggle="modal" data-target="#demo" value="SiteBuilder"> </td></tr>
+	   <input type="button" style="width: 7em" class="btn btn-danger" href="#" data-toggle="modal" data-target="#demo" value="Delete"> <br><a class="btn btn-primary" href="sitebuilder.html" style="width: 7em">SiteBuilder</a> </td></tr>
    </tbody>
    </table>
 <br>
