--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-redirects" class="itemImageWrapper integrations_icon spriteicon_img icon-redirects" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-redirects" class="itemImageWrapper integrations_icon spriteicon_img icon-redirects" href="redirect.html">
                                  </a>
-                                 <a id="item_redirects" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Redirects</a>
+                                 <a id="item_redirects" class="itemTextWrapper link"  href="redirect.html">Redirects</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                            </div>
