Add Access Logs page

--- a/index.html
+++ b/index.html
@@ -397,9 +397,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-raw_access" class="itemImageWrapper integrations_icon spriteicon_img icon-raw_access" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-raw_access" class="itemImageWrapper integrations_icon spriteicon_img icon-raw_access" href="accesslogs.html">
                                  </a>
-                                 <a id="item_raw_access" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Access Logs</a>
+                                 <a id="item_raw_access" class="itemTextWrapper link"  href="accesslogs.html">Access Logs</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                            </div>
