Update other index pages to reflect 7e7b9a1

--- a/formatted.index.html
+++ b/formatted.index.html
@@ -899,11 +899,9 @@
                            <!-- ngRepeat: item in ::group.items track by item.file -->
                            <div class="item" role="page">
                               <a id="icon-cron_jobs"
-                                 class="itemImageWrapper integrations_icon spriteicon_img icon-cron_jobs" href="#"
-                                 data-toggle="modal" data-target="#demo" target="">
+                                 class="itemImageWrapper integrations_icon spriteicon_img icon-cron_jobs" href="cron_select.html">
                               </a>
-                              <a id="item_cron_jobs" class="itemTextWrapper link" href="#" data-toggle="modal"
-                                 data-target="#demo" target="">Cron Jobs</a>
+                              <a id="item_cron_jobs" class="itemTextWrapper link" href="cron_select.html">Cron Jobs</a>
                            </div>
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                            <div class="item" role="page">
