Add Alter PHP Config page

--- a/formatted.index.html
+++ b/formatted.index.html
@@ -868,8 +868,7 @@
                                  class="itemImageWrapper integrations_icon spriteicon_img icon-multiphp_configuration"
                                  href="#" data-toggle="modal" data-target="#demo" target="">
                               </a>
-                              <a id="item_multiphp_configuration" class="itemTextWrapper link" href="#"
-                                 data-toggle="modal" data-target="#demo" target="">Alter PHP Config</a>
+                              <a id="item_multiphp_configuration" class="itemTextWrapper link" href="phpconfig.html">Alter PHP Config</a>
                            </div>
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                            <!-- DISABLED
