Fix issue with formatted index
Due to not having a closing on the error log href, the icons of the error logs and phpinfo would be together.

--- a/formatted.index.html
+++ b/formatted.index.html
@@ -773,7 +773,7 @@
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                            <div class="item" role="page">
                               <a id="icon-errors" class="itemImageWrapper integrations_icon spriteicon_img icon-errors"
-                                 href="errorlog.html>
+                                 href="errorlog.html">
                               </a>
                               <a id="item_errors" class="itemTextWrapper link" href="errorlog.html">Error Logs</a>
                            </div>
