--- a/ourCDN.html
+++ b/ourCDN.html
@@ -453,9 +453,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-attracta_seotips" class="itemImageWrapper integrations_icon spriteicon_img icon-attracta_seotips" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-attracta_seotips" class="itemImageWrapper integrations_icon spriteicon_img icon-attracta_seotips" href="http://31.22.7.79/" target="_blank">
                                  </a>
-                                 <a id="item_attracta_seotips" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">SEO Tools</a>
+                                 <a id="item_attracta_seotips" class="itemTextWrapper link"  href="http://31.22.7.79/" target="_blank">SEO Tools</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
