--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-disk_usage" class="itemImageWrapper integrations_icon spriteicon_img icon-disk_usage" href="Diskspace.html">
+                                 <a id="icon-disk_usage" class="itemImageWrapper integrations_icon spriteicon_img icon-disk_usage" href="diskspace.html">
                                  </a>
-                                 <a id="item_disk_usage" class="itemTextWrapper link"  href="Diskspace.html">Disk Usage</a>
+                                 <a id="item_disk_usage" class="itemTextWrapper link"  href="diskspace.html">Disk Usage</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
@@ -256,9 +256,9 @@
                            <div id="databases-body" class="panel-body icon-container-body">
                               <!-- ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-php_my_admin" class="itemImageWrapper integrations_icon spriteicon_img icon-php_my_admin" href="Pma.html">
+                                 <a id="icon-php_my_admin" class="itemImageWrapper integrations_icon spriteicon_img icon-php_my_admin" href="pma.html">
                                  </a>
-                                 <a id="item_php_my_admin" class="itemTextWrapper link"  href="Pma.html">phpMyAdmin</a>
+                                 <a id="item_php_my_admin" class="itemTextWrapper link"  href="pma.html">phpMyAdmin</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
@@ -536,9 +536,9 @@
                            <div id="support-body" class="panel-body icon-container-body">
                               <!-- ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-cloudflare_performance" class="itemImageWrapper integrations_icon spriteicon_img icon-cloudflare_performance" href="Tutorialdomain.html" target="">
+                                 <a id="icon-cloudflare_performance" class="itemImageWrapper integrations_icon spriteicon_img icon-cloudflare_performance" href="tutorialdomain.html" target="">
                                  </a>
-                                 <a id="item_cloudflare_performance" class="itemTextWrapper link" href="Tutorialdomain.html" target="">Domain Types</a>
+                                 <a id="item_cloudflare_performance" class="itemTextWrapper link" href="tutorialdomain.html" target="">Domain Types</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
