--- a/jsdelivr.html
+++ b/jsdelivr.html
@@ -554,9 +554,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-createticket" class="itemImageWrapper integrations_icon spriteicon_img icon-createticket" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-createticket" class="itemImageWrapper integrations_icon spriteicon_img icon-createticket" href="newticket.html">
                                  </a>
-                                 <a id="item_createticket" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Create New Ticket</a>
+                                 <a id="item_createticket" class="itemTextWrapper link"  href="newticket.html">Create New Ticket</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
