Add Closed Tickets page
Also fixes a broken sidebar link on ourcdn.html

--- a/formatted.index.html
+++ b/formatted.index.html
@@ -998,11 +998,9 @@
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                            <div class="item" role="page">
                               <a id="icon-api_shell"
-                                 class="itemImageWrapper integrations_icon spriteicon_img icon-api_shell" href="#"
-                                 data-toggle="modal" data-target="#demo" target="">
+                                 class="itemImageWrapper integrations_icon spriteicon_img icon-api_shell" href="closedtickets.html">
                               </a>
-                              <a id="item_api_shell" class="itemTextWrapper link" href="#" data-toggle="modal"
-                                 data-target="#demo" target="">Closed Support Tickets</a>
+                              <a id="item_api_shell" class="itemTextWrapper link" href="closedtickets.html  "">Closed Support Tickets</a>
                            </div>
                            <!-- end ngRepeat: item in ::group.items track by item.file -->
                         </div>
