--- a/ourCDN.html
+++ b/ourCDN.html
@@ -92,7 +92,7 @@
             <a id="lnkMenu" href="./" title="" class="active" data-toggle="tooltip" data-placement="right" data-original-title="Home">
             <i class="fa fa-2x fa-th" id="imgMenu"></i>
             </a>
-            <a id="26244546358179969" href="#" data-toggle="modal" data-target="#demo" title="" data-toggle="tooltip" data-placement="right" data-original-title="Upgrade Plans">
+            <a id="26244546358179969" href="upgrade.html" data-original-title="Upgrade Plans">
             <img width="28px" height="28px" src="https://vpd.cdn.wybenetwork.com/elements/pl-sidebar-upgrade.png">
             </a>
             <br><br>
@@ -566,9 +566,9 @@
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                               <div class="item" role="page">
-                                 <a id="icon-api_shell" class="itemImageWrapper integrations_icon spriteicon_img icon-api_shell" href="#" data-toggle="modal" data-target="#demo" target="">
+                                 <a id="icon-api_shell" class="itemImageWrapper integrations_icon spriteicon_img icon-api_shell" href="closedtickets.html">
                                  </a>
-                                 <a id="item_api_shell" class="itemTextWrapper link"  href="#" data-toggle="modal" data-target="#demo" target="">Closed Support Tickets</a>
+                                 <a id="item_api_shell" class="itemTextWrapper link"  href="closedtickets.html">Closed Support Tickets</a>
                               </div>
                               <!-- end ngRepeat: item in ::group.items track by item.file -->
                            </div>
